--- a/templates/search_results.html
+++ b/templates/search_results.html
@@ -4,6 +4,7 @@
 <head>
     <title>Search Results - Letterboxd Movie Recommender</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </head>
