--- a/templates/progress.html
+++ b/templates/progress.html
@@ -3,6 +3,7 @@
 <head>
     <title>Updating Database - Letterboxd Movie Recommender</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="icon" href="{{ url_for('static', filename='favicon.ico') }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         .progress-container {
