--- a/templates/index.html
+++ b/templates/index.html
@@ -67,11 +67,11 @@
                         <div class="form-row">
                             <div class="form-group third">
                                 <label for="min_year">From Year:</label>
-                                <input type="number" name="min_year" id="min_year" min="1900" max="2023">
+                                <input type="number" name="min_year" id="min_year" min="1900" max="{{ current_year }}">
                             </div>
                             <div class="form-group third">
                                 <label for="max_year">To Year:</label>
-                                <input type="number" name="max_year" id="max_year" min="1900" max="2023">
+                                <input type="number" name="max_year" id="max_year" min="1900" max="{{ current_year }}">
                             </div>
                             <div class="form-group third rating-group">
                                 <label for="min_rating">Min Rating:</label>
