Add input validation and error handling in recommendations and search

--- a/templates/index.html
+++ b/templates/index.html
@@ -62,7 +62,7 @@
                     <h2>Search Movies</h2>
                     <form action="/search" method="get">
                         <div class="form-group">
-                            <input type="text" name="query" placeholder="Search by title or description" class="search-input">
+                            <input type="text" name="query" placeholder="Search by title or description" class="search-input" maxlength="100">
                         </div>
                         <div class="form-row">
                             <div class="form-group third">
